# SimpleShooter

./: .gitignore  CMakeLists.txt  README.md
CMake Subfolders/SDL2Mixer/: CMakeLists.txt
data/fonts/: info.txt
include/: Animation.h  BehaviourTree.h  Drawer.h  Menu.h  ParticleSystem.h  StateMachine.h  Texture.h  World.h
include/Assets/: BackgroundAsset.h  Button.h  MiscAsset.h  ProjectileAsset.h  SDLMaths.h  ShipAsset.h  UIAsset.h
include/Entities/: AIShipEntity.h  AllyShipEntity.h  BaseEntity.h  BulletEntity.h  DynamicEntity.h  EnemyShipEntity.h  GameCharacterEntity.h  HealthPickupEntity.h  PlayerShipEntity.h  StartStateShipEntity.h
include/States/: BaseState.h  GameLostState.h  GamePausedState.h  GameWonState.h  PlayState.h  StartState.h  TransitionState.h
src/: Animation.cpp  Drawer.cpp  Menu.cpp  ParticleSystem.cpp  StateMachine.cpp  Texture.cpp  World.cpp  main.cpp
src/Assets/: AIShipEntity.cpp  BackgroundAsset.cpp  MiscAsset.cpp  ProjectileAsset.cpp  SDLMaths.cpp  ShipAsset.cpp  UIAsset.cpp
src/Entities/: AIShipEntity.cpp  AllyShipEntity.cpp  BaseEntity.cpp  BulletEntity.cpp  DynamicEntity.cpp  EnemyShipEntity.cpp  HealthPickupEntity.cpp  PlayerShipEntity.cpp  StartStateShipEntity.cpp
src/States/: BaseState.cpp  GameLostState.cpp  GamePausedState.cpp  GameWonState.cpp  PlayState.cpp  StartState.cpp  TransitionState.cpp
